# ultimatexo

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
.agents/skills/vercel-react-best-practices/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  cleanup.yml  deploy.yml  docker-ci-cd.yml  docker-publish.yml  pr-labeler.yml  release-drafter.yml  stale.yml
.opencode/plans/: cicd-rewrite.md
bruno/: Check server Health.bru  Create a new Room.bru  Get Room.bru  Get Rooms.bru  Websocket 1.bru  Websocket 2.bru  Websocket 3.bru  bruno.json  collection.bru
bruno/environments/: Local.bru
caddy/: Caddyfile  Dockerfile
client/: .dockerignore  .env.dev  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/public/: manifest.json  robots.txt
client/src/: App.tsx  index.css  main.tsx
client/src/components/: background-effects.tsx  board.tsx  cell.tsx  chat.tsx  footer.tsx  home-button.tsx  icons.tsx  miniBoard.tsx  navbar.tsx  roomCard.tsx  settings-modal.tsx  theme-switch.tsx
client/src/components/instructions/: AutoPlayDemo.tsx  BackAndForthDemo.tsx  index.ts  shared.tsx
client/src/components/room/: actions.tsx  board.tsx  cell.tsx  chat.tsx  confetti.tsx  miniBoard.tsx  ripple.tsx  status.tsx
client/src/components/ui/: button.tsx  modal.tsx  tooltip-icon.tsx
client/src/config/: site.ts
client/src/data/: board-states.json
client/src/functions/: game.ts
client/src/hooks/: useGame.ts  useKeyboardNavigation.ts  usePageMeta.ts  useScrollDirection.ts  useScrollSpy.ts  useWindowSize.ts
client/src/layouts/: default.tsx  room.tsx
client/src/pages/: createRoom.tsx  index.tsx  instructions.tsx  quick.tsx  room.tsx  rooms.tsx
client/src/store/: game.ts  index.ts  player.ts  room.ts  settings.ts
client/src/styles/: globals.css
client/src/types/: actions.ts  index.ts  messages.ts  player.ts
client/src/utils/: sound.ts
scripts/: README.md  deploy.sh  health-check.sh
server/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md
server/crates/: README.md
server/crates/ai/: Cargo.toml
server/crates/ai/src/: lib.rs  minimax.rs
server/crates/core/: Cargo.toml
server/crates/core/src/: error.rs  lib.rs
server/crates/core/src/domain/: bot_room_rules.rs  game.rs  local_room_rules.rs  room_rules.rs  standard_room_rules.rs
server/crates/core/src/models/: game.rs  messages.rs  mod.rs  room.rs
server/crates/server/: Cargo.toml
server/crates/server/src/: main.rs  utils.rs
server/crates/server/src/app/: server.rs  state.rs
server/crates/server/src/handlers/: api.rs  doc.rs  mod.rs  tasks.rs  websocket.rs
server/crates/server/src/utils/: messages.rs  otel.rs  real_ip.rs
server/crates/services/: Cargo.toml
server/crates/services/src/: cleanup_service.rs  game_ai_service.rs  lib.rs  room_service.rs
server/crates/ultimatexo-ai/src/: minimax.rs
server/crates/ultimatexo-core/src/domain/: game.rs
server/crates/ultimatexo-server/src/: main.rs  utils.rs
server/crates/ultimatexo-server/src/app/: server.rs  state.rs
server/crates/ultimatexo-server/src/handlers/: api.rs  doc.rs  tasks.rs  websocket.rs
server/crates/ultimatexo-services/src/: cleanup_service.rs  game_ai_service.rs  room_service.rs
server/src/: app.rs  error.rs  game.rs  main.rs  minimax.rs  room.rs  routes.rs  utils.rs
server/src/ai/: evaluation.rs  minimax.rs  mod.rs
server/src/api/: routes.rs
server/src/app/: app.rs  mod.rs  server.rs  state.rs
server/src/domain/: bot_room_rules.rs  game.rs  local_room_rules.rs  mod.rs  room_rules.rs  standard_room_rules.rs
server/src/game/: game.rs
server/src/handlers/: api.rs  doc.rs  mod.rs  tasks.rs  websocket.rs
server/src/models/: game.rs  messages.rs  mod.rs  player.rs  room.rs
server/src/room/: manager.rs  room.rs
server/src/services/: cleanup_service.rs  game_service.rs  mod.rs  room_service.rs
server/src/types/: game.rs  messages.rs  mod.rs  player.rs  room.rs
server/src/websocket/: handler.rs
