[workspace]
resolver = "2"
members = ["crates/core", "crates/ai", "crates/services", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal dependencies
ultimatexo-core = { path = "crates/core" }
ultimatexo-ai = { path = "crates/ai" }
ultimatexo-services = { path = "crates/services" }

# External dependencies
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
minimax = "0.5.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4"] }
