[workspace]
resolver = "2"
members = ["crates/core", "crates/ai", "crates/services", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal dependencies
ultimatexo-core = { path = "crates/core" }
ultimatexo-ai = { path = "crates/ai" }
ultimatexo-services = { path = "crates/services" }

# External dependencies
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.0", features = ["v4"] }
