[package]
name = "ultimatexo-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
ultimatexo-core = { workspace = true }
ultimatexo-services = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower_governor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
